data/raw_logs/lexical/lex_19.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_19.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_19.c:1:22: error: expected expression before '%' token
    1 | int main() { int x = %; }
      |                      ^
